# claude-impact-lab-melbourne-team-5

./: .gitignore  README.md  STATE.md
.claude/skills/optimize-prompt/: SKILL.md
backend/: README.md  auth.py  badge_logic.py  database.py  deps.py  main.py  models.py  openapi.json  pyproject.toml  render.yaml  requirements.txt  schemas.py  seed.py
backend/routers/: badges.py  chat.py  events.py  locations.py  users.py
backend/services/: anthropic_client.py  maxxer.py
backend/tests/: conftest.py  test_anthropic_client.py  test_badge_logic.py  test_chat.py  test_events.py  test_locations.py  test_maxxer.py  test_rsvp.py  test_search.py  test_seed.py  test_smoke.py  test_users.py
docs/: PXL-DS-v3-handover.md  dependencies.md  dev1-dependencies.md  dev2-dependencies.md  dev3-dependencies.md  dev3-pxl-design-workflow.md  dev4-dependencies.md  pxl-ds-v3.html
frontend/: .env.example  README.md  index.html  netlify.toml  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  api.test.js  index.css  main.jsx
frontend/src/assets/: spaced-deck.html
frontend/src/components/: AttendeeChips.jsx  AuthModal.jsx  BadgeShelf.jsx  BadgeUnlockModal.jsx  ChatPanel.jsx  ChatPanelSlot.jsx  DevSocialPreview.jsx  EventCard.jsx  EventModal.jsx  HostBadge.jsx  LocationPin.jsx  MapView.jsx  MaxxerEventSuggestion.jsx  NavHeader.jsx  NotificationFeed.jsx  OnboardingChat.jsx  OnboardingGate.jsx  ProfilePanel.jsx  RsvpConfirmationModal.jsx  SearchBar.jsx  Toaster.jsx
frontend/src/hooks/: useBadgeWatcher.js  useMaxxer.js  useTheme.js  useToast.jsx  useUser.js
(+23 files in other folders)
