[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.4",
    "httpx==0.27.2",
    "pydantic[email]==2.9.2",
    "pytest==8.3.3",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.32.0",
]
